intern/cloud/w10/lab/hung_lab/gatekeeper/constraints/disallow-run-as-root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowRunAsRoot
metadata:
  name: disallow-run-as-root
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
      - apiGroups: ["argoproj.io"]
        kinds: ["Rollout"]
    namespaces:
      - demo
