intern/cloud/w10/lab/hung_lab/gatekeeper/constraints/require-owner-label.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireOwnerLabel
metadata:
  name: require-owner-label
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
      - apiGroups: ["argoproj.io"]
        kinds: ["Rollout"]
    namespaces:
      - demo
  parameters:
    labels: ["owner"]
